-----------------------------------------------------------------------
** ecasound - user visible changes (NEWS)      (last edited: 140400) **
-----------------------------------------------------------------------

About the version numbers... "vx.y.zRt" :

  x = major version  - the overall development status
  y = devel-series   - represents a set of planned features
  z = minor version  - version number of the current development series
  Rt = 'rx'          - stable release number x
  Rt = 'dx'  	     - development version

-----------------------------------------------------------------------

Last officially released version is -*> v1.6.12r10 <*-

17042000 (v1.7.6d11)
	- added: new input/output device 'alsaplugin' - similar to 
		 normal ALSA pcm-devices, but uses the pcm-plugin 
		 layer (automatic sample rate and format conversions)
	- changed: much faster communication between engine and ui
	- changed: qtecasound - replaced some old widgets with 
		   new libqtecasound widgets
	- fixed: qtecasound - core dumps when removing audio objects
	- fixed: qtecasound - many minor bugs
12042000 (v1.7.5d11)
	- added: ALSA support for s32_le and s32_be sample formats
	- added: numerous fixes and small improvements to ALSA 0.5.x 
		 support
	- removed: dynamic loading of ALSA support - as ALSA is
		   getting bigger and bigger, maintaining dynamic 
		   support has become more and more difficult - 
		   this means that ALSA support isn't anymore included 
		   in binary distribution packages - to get native 
		   ALSA support, you have to compile ecasound from 
		   sources - of course you can always use ALSA's 
		   OSS-emulation layer 
	- changed: pitch-shifter (-ei) improvements - thanks to Arto
	 	   Hamara for the tips
	- changed: above improvements also affect normal resampling
	- changed: ia-mode commands cop-add, cop-remove and ctrl-add
		   can now be used with connected chainsetups (add 
		   effects on-the-fly, etc)
	- changed: updated LADSPA support to v1