@@ -76,7 +76,7 @@ qt_libraries = /usr/lib/qt-2.0.1/lib
 prefix = /usr/local
 mandir = $(prefix)/man
 PACKAGE = ecawave
-VERSION = 0.2.0d2   
+VERSION = 0.2.1d2   
 # ---------------------------------------------------------------------
 # Files going into distribution:
 DISTFILES = Makefile.am 		Makefile.in 		ecawave.1 	    	ecawave_manpage.man 		ecawave_manpage.html 		ecawave_manpage.yo 	    	users_guide.yo 	    	users_guide.html
