@@ -18,6 +18,7 @@
 // ------------------------------------------------------------------------
 
 #include <config.h>
+#ifdef COMPILE_ALSA
 #ifdef ALSALIB_050
 
 #include <string>
@@ -382,3 +383,4 @@ string ALSA_PCM2_DEVICE::get_parameter(int param) const {
 }
 
 #endif // ALSALIB_050
+#endif // COMPILE_ALSA
